<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradientorange"
    tools:context=".LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:id="@+id/rectboox"
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="140dp"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="70dp"
                android:background="@drawable/retcboox"
                android:textAlignment="center">

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="wrap_content"
                    android:layout_height="120dp"
                    android:layout_marginTop="15dp"
                    android:src="@drawable/logo1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/tx_email"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/imageView3"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="60dp"
                    android:layout_marginEnd="26dp"
                    android:backgroundTint="@color/orange"
                    android:drawableLeft="@drawable/ic_twotone_email_24"
                    android:drawablePadding="12dp"
                    android:hint="@string/email"
                    android:textColor="@color/orange"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintWidth_percent=".8" />

                <EditText
                    android:id="@+id/tx_password"
                    android:inputType="textPassword"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tx_email"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="26dp"
                    android:backgroundTint="@color/orange"
                    android:drawableLeft="@drawable/ic_twotone_vpn_key_24"
                    android:drawablePadding="12dp"
                    android:hint="@string/password"
                    android:textColor="@color/orange"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintWidth_percent=".8" />


                <Button
                    android:id="@+id/button_login"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tx_password"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="30dp"
                    android:layout_marginEnd="26dp"
                    android:backgroundTint="@color/orange"
                    android:padding="10dp"
                    android:text="@string/masuk"
                    android:textAllCaps="false"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.439"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintVertical_bias="0.728"
                    app:layout_constraintWidth_percent=".8" />

                <TextView
                    android:id="@+id/tx_sudah"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/button_login"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="140dp"
                    android:hint="Belum punya akun? "
                    android:textAlignment="center"
                    android:textColor="@color/gray"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.344"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintVertical_bias="0.200" />

                <TextView
                    android:id="@+id/tx_regis"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/button_login"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="95dp"
                    android:text="@string/daftar"
                    android:textAlignment="center"
                    android:textColor="@color/orange"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.05"
                    app:layout_constraintStart_toEndOf="@+id/tx_sudah"
                    app:layout_constraintVertical_bias="0.200" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tx_daftar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="305dp"
                    android:fontFamily="@font/poppins_semibold"
                    android:text="MASUK"
                    android:textAlignment="center"
                    android:textColor="@color/orange"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent" />
            </RelativeLayout>
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>
